# RewindAI

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: context-engine.md  extension-architect.md  graph-modeler.md  pipeline-engineer.md
backend/: requirements.txt  start.sh
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/graph/: neo4j_client.py  queries.py  schema.py
backend/app/models/: schema.py
backend/app/services/: context_service.py  decision_service.py  snapshot_service.py
extension/: package-lock.json  package.json
extension/src/: extension.ts
extension/src/agent/: loop.ts
extension/src/backend/: client.ts  types.ts
extension/src/chat/: panelProvider.ts  participant.ts
extension/src/context/: commitSuggester.ts  compactor.ts  manager.ts  sessionNotes.ts
pipelines/: compression.json  extraction.json  reconstruction.json
rewindai/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
rewindai/backend/: requirements.txt
rewindai/cli/: README.md  pyproject.toml
rewindai/cli/rewindai_cli/: __init__.py  api.py  main.py  shell.py
rewindai/cli/rewindai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rewindai/cli/tests/: test_cli.py
rewindai/docs/: demo.md  runbook.md
rewindai/frontend/: index.html  package-lock.json  package.json
rewindai/pipelines/: context_assembly.json  diff.json  extraction.json
rewindai/scripts/: reset_demo.sh  seed_demo.py
scripts/: seed-demo.py  start-services.sh  test-commit-switching.sh
(+57 files in other folders)
