[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewindai-cli"
version = "0.1.0"
description = "RewindAI CLI — Git for AI memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.scripts]
rewind = "rewindai_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

